reserve/reserve.css
/* ... */
@media (max-width: 480px) {
    .calendar .day {
        height: 50px; /* Further reduce height for very small screens */
    }

    h1 {
        font-size: 1.5em; /* Even smaller heading size for very small screens */
    }
}



.modal-content #submit-cancel{
    border-radius: 5px;
    background-color: #c82333;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    max-height: 300px; /* Adjust this value as needed */
    overflow-y: auto;
    bottom: 100%; /* Position the dropdown above the button */
}

.dropdown-content label {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown-content label:hover {
    background-color: #007bff;
    color: white;
}

.dropdown:hover .dropdown-content {
    display: block;
}

/* Ensure the dropdown doesn't go off-screen at the top */
@media screen and (max-height: 500px) {
    .dropdown-content {
        bottom: auto;
        top: 100%;
    }
}

body {
    font-family: 'Arial', sans-serif;
    margin: 0;
    padding: 0;
    overflow-x: hidden; /* Prevent horizontal scrolling by default */
}

body.loaded {
    overflow-x: hidden; /* Keep this instead of auto */
    overflow-y: auto; /* Allow vertical scrolling */
}

* {
    max-width: 100%;
    box-sizing: border-box; /* Ensures padding/margins are included in width */
}

